--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,16 @@ node_js:
   - "7"
   - "8"
 
+cache: yarn
+
 script:
-  - npm install
+  - yarn
   - npm run lint
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: dev
