--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,15 @@ cache: yarn
 
 script:
   - yarn
-  - npm run lint
+  - yarn run lint
+  - yarn run build
 
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: true
+  target_branch: master
+  local_dir: public
   on:
     branch: dev
