--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
     secret_access_key: $AWS_SECRET_ACCESS_KEY
     bucket: $PROD_S3_BUCKET
     acl: public_read
-    local_dir: '.'
+    local_dir: 'public'
     skip_cleanup: true
     region: 'eu-central-1'
     on:
