--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "dependencies": {
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-google-analytics": "^2.1.7",
+    "gatsby-plugin-less": "^3.0.5",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-source-contentful": "^2.0.48",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.18",
+    "less": "^3.10.3",
     "lodash": "^4.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
