--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-less": "^3.0.5",
