--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grundeinkommen",
     "vertrauensgesellschaft"
   ],
-  "license": "MIT",
+  "license": "MIT (excluding the fonts)",
   "main": "n/a",
   "repository": {
     "type": "git",
