--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "classnames": "^2.2.6",
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-less": "^3.0.5",
