--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Johann Barbie <johannbarbie@me.com>",
   "scripts": {
     "dev": "npm run develop",
+    "dev-m": "gatsby develop -p 8000",
     "develop": "gatsby develop",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
