--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-less": "^3.0.5",
+    "gatsby-plugin-matomo": "^0.7.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-source-contentful": "^2.0.48",
