--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "aws-amplify": "^1.1.40",
     "classnames": "^2.2.6",
+    "final-form": "^4.18.5",
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-less": "^3.0.5",
@@ -45,6 +46,7 @@
     "lodash": "^4.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-final-form": "^6.3.0",
     "react-helmet": "^5.2.0",
     "sharp": "^0.22.0",
     "svg-inline-loader": "^0.8.0"
