--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,20 @@ before_install:
 
 cache: yarn
 
+before_install:
+  - |
+      if [ "$TRAVIS_BRANCH" = "master" && "$IS_CONTENTFUL" = "true" ]; then
+        CLOUDFRONT_DISTRIBUTION = $STAGING_CLOUDFRONT_DISTRIBUTION
+      elif [ "$TRAVIS_BRANCH" = "master" ]; then
+        CLOUDFRONT_DISTRIBUTION = $PROD_CLOUDFRONT_DISTRIBUTION
+      elif [ "$TRAVIS_BRANCH" = "develop" ]; then
+        CLOUDFRONT_DISTRIBUTION = $DEV_CLOUDFRONT_DISTRIBUTION
+      elif [ "$TRAVIS_BRANCH" = "develop" && "$$TRAVIS_TAG" ]; then
+        CLOUDFRONT_DISTRIBUTION = $DEMO_CLOUDFRONT_DISTRIBUTION
+      elif [ "$$TRAVIS_TAG" ]; then
+        CLOUDFRONT_DISTRIBUTION = $DEMO_CLOUDFRONT_DISTRIBUTION
+      fi
+
 script:
   - yarn
   - yarn run lint
@@ -19,11 +33,6 @@ script:
     COGNITO_APP_CLIENT_ID='`$COGNITO_APP_CLIENT_ID`'
     EOF
   - yarn run build
-  - if [ "$TRAVIS_BRANCH" = "master" && "$IS_CONTENTFUL" = "true" ]; then CLOUDFRONT_DISTRIBUTION=$STAGING_CLOUDFRONT_DISTRIBUTION fi
-  - if [ "$TRAVIS_BRANCH" = "master" ]; then CLOUDFRONT_DISTRIBUTION=$PROD_CLOUDFRONT_DISTRIBUTION fi
-  - if [ "$TRAVIS_BRANCH" = "develop" ]; then CLOUDFRONT_DISTRIBUTION=$DEV_CLOUDFRONT_DISTRIBUTION fi
-  - if [ "$TRAVIS_BRANCH" = "develop" && "$$TRAVIS_TAG" ]; then CLOUDFRONT_DISTRIBUTION=$DEMO_CLOUDFRONT_DISTRIBUTION fi
-  - if [ "$$TRAVIS_TAG" ]; then CLOUDFRONT_DISTRIBUTION=$DEMO_CLOUDFRONT_DISTRIBUTION fi
 
 deploy:
   - provider: s3
