--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ cache: yarn
 
 before_install:
   - |
-      if [ "$TRAVIS_BRANCH" = "master" && "$IS_CONTENTFUL" = "true" ]; then
+      if [ "$TRAVIS_BRANCH" == "master" && "$IS_CONTENTFUL" == "true" ]; then
         CLOUDFRONT_DISTRIBUTION = $STAGING_CLOUDFRONT_DISTRIBUTION
       elif [ "$TRAVIS_BRANCH" = "master" ]; then
         CLOUDFRONT_DISTRIBUTION = $PROD_CLOUDFRONT_DISTRIBUTION
-      elif [ "$TRAVIS_BRANCH" = "develop" ]; then
+      elif [ "$TRAVIS_BRANCH" == "develop" ]; then
         CLOUDFRONT_DISTRIBUTION = $DEV_CLOUDFRONT_DISTRIBUTION
-      elif [ "$TRAVIS_BRANCH" = "develop" && "$$TRAVIS_TAG" ]; then
+      elif [ "$TRAVIS_BRANCH" == "develop" && "$$TRAVIS_TAG" ]; then
         CLOUDFRONT_DISTRIBUTION = $DEMO_CLOUDFRONT_DISTRIBUTION
       elif [ "$$TRAVIS_TAG" ]; then
         CLOUDFRONT_DISTRIBUTION = $DEMO_CLOUDFRONT_DISTRIBUTION
