--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,14 @@ script:
     EOF
   - yarn run build
 
+before_install:
+  - |
+    if [ "$TRAVIS_BRANCH" = "master" ]; then
+      eval export CLOUDFRONT_DISTRIBUTION="$STAGING_CLOUDFRONT_DISTRIBUTION"
+    elif [ "$TRAVIS_BRANCH" = "dev" ]; then
+      eval export CLOUDFRONT_DISTRIBUTION="$DEV_CLOUDFRONT_DISTRIBUTION"
+    fi
+
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
@@ -28,10 +36,10 @@ deploy:
     acl: public_read
     local_dir: 'public'
     skip_cleanup: true
-    script: env CLOUDFRONT_DISTRIBUTION=$PROD_CLOUDFRONT_DISTRIBUTION
     region: 'eu-central-1'
     on:
       branch: master
+      tags: true
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
@@ -39,11 +47,10 @@ deploy:
     acl: public_read
     local_dir: 'public'
     skip_cleanup: true
-    script: env CLOUDFRONT_DISTRIBUTION=$STAGING_CLOUDFRONT_DISTRIBUTION
     region: 'eu-central-1'
     on:
       branch: master
-      condition: $IS_CONTENTFUL = true
+      condition: $IS_CONTENTFUL=true
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
@@ -51,7 +58,6 @@ deploy:
     acl: public_read
     local_dir: 'public'
     skip_cleanup: true
-    script: env CLOUDFRONT_DISTRIBUTION=$DEV_CLOUDFRONT_DISTRIBUTION
     region: 'eu-central-1'
     on:
       branch: dev
@@ -63,11 +69,11 @@ deploy:
     acl: public_read
     local_dir: 'public'
     skip_cleanup: true
-    script: env CLOUDFRONT_DISTRIBUTION=$DEMO_CLOUDFRONT_DISTRIBUTION
     region: 'eu-central-1'
     on:
       tags: true
 
 after_deploy:
+  - echo $CLOUDFRONT_DISTRIBUTION
   - aws configure set preview.cloudfront true
   - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION --paths "/*"
