--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,18 @@ before_install:
   - pip install --user awscli
   - export PATH=$PATH:$HOME/.local/bin
   - |
-    if [ "$TRAVIS_BRANCH" = "master" ]; then
+    if [ "$TRAVIS_TAG" ]; then
+      eval export CLOUDFRONT_DISTRIBUTION="$DEMO_CLOUDFRONT_DISTRIBUTION"
+    fi
+  - |
+    if [ "$TRAVIS_BRANCH" = "master" && "$IS_CONTENTFUL" = "true" ]; then
       eval export CLOUDFRONT_DISTRIBUTION="$STAGING_CLOUDFRONT_DISTRIBUTION"
-    elif [ "$TRAVIS_BRANCH" = "dev" ]; then
+    elif [ "$TRAVIS_BRANCH" = "master" ]; then
+      eval export CLOUDFRONT_DISTRIBUTION="$PROD_CLOUDFRONT_DISTRIBUTION"
+    elif [ "$TRAVIS_BRANCH" = "dev" && "$TRAVIS_TAG" ]; then
       eval export CLOUDFRONT_DISTRIBUTION="$DEV_CLOUDFRONT_DISTRIBUTION"
     fi
+  - echo $CLOUDFRONT_DISTRIBUTION
 
 cache: yarn
 
@@ -72,6 +79,5 @@ deploy:
       tags: true
 
 after_deploy:
-  - echo $CLOUDFRONT_DISTRIBUTION
   - aws configure set preview.cloudfront true
   - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION --paths "/*"
