chang back env variable name

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
     cat > .env.production << EOF
     CONTENTFUL_SPACE_ID='`$CONTENTFUL_SPACE_ID`'
     CONTENTFUL_ACCESS_TOKEN='`$CONTENTFUL_ACCESS_TOKEN`'
-    GATSBY_APP_CLIENT_ID='`$COGNITO_APP_CLIENT_ID`'
+    COGNITO_APP_CLIENT_ID='`$COGNITO_APP_CLIENT_ID`'
     EOF
   - yarn run build
 
