bugfix: changed condition for deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ deploy:
     region: 'eu-central-1'
     on:
       branch: master
-      condition: $IS_CONTENTFUL=true
+      condition: $IS_CONTENTFUL=yes
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
