fix: contentful change had been deploying to prod

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ deploy:
     region: 'eu-central-1'
     on:
       branch: master
+      tags: true
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
@@ -84,6 +85,5 @@ deploy:
       tags: true
 
 after_deploy:
-  - echo $CLOUDFRONT_DISTRIBUTION
   - aws configure set preview.cloudfront true
   - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION --paths "/*"
