--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
       eval export CLOUDFRONT_DISTRIBUTION="$DEMO_CLOUDFRONT_DISTRIBUTION"
     fi
   - |
-    if [ "$TRAVIS_BRANCH" == "master" && "$IS_CONTENTFUL" == "yes" ]; then
+    if [ "$TRAVIS_BRANCH" == "master" && "$IS_CONTENTFUL" == yes ]; then
       eval export CLOUDFRONT_DISTRIBUTION="$STAGING_CLOUDFRONT_DISTRIBUTION"
     elif [ "$TRAVIS_BRANCH" == "master" ]; then
       eval export CLOUDFRONT_DISTRIBUTION="$PROD_CLOUDFRONT_DISTRIBUTION"
