--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ deploy:
     region: 'eu-central-1'
     on:
       branch: master
-      tags: true
+ #     tags: true
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
