--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "dependencies": {
     "@aws-amplify/auth": "^1.4.2",
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "classnames": "^2.2.6",
     "final-form": "^4.18.5",
     "gatsby-image": "^2.0.38",
