--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ before_install:
   - |
     if [ $TRAVIS_BRANCH == "master" ] && [ $IS_CONTENTFUL == "yes" ]; then
       echo "is from contentful"
-      eval export CLOUDFRONT_DISTRIBUTION="$STAGING_CLOUDFRONT_DISTRIBUTION"
+      eval export CLOUDFRONT_DISTRIBUTION="$PROD_CLOUDFRONT_DISTRIBUTION"
     elif [ $TRAVIS_BRANCH == "master" ]; then
       echo "is from master"
       eval export CLOUDFRONT_DISTRIBUTION="$PROD_CLOUDFRONT_DISTRIBUTION"
-    elif [ $TRAVIS_BRANCH == "dev" ]; then
-      echo "is from dev"
+    elif [ $TRAVIS_BRANCH == "dev" ] && [ $TRAVIS_TAG != "dev"]; then
+      echo "is from dev without tag"
       eval export CLOUDFRONT_DISTRIBUTION="$DEV_CLOUDFRONT_DISTRIBUTION"
     fi
   - echo $CLOUDFRONT_DISTRIBUTION
@@ -51,7 +51,6 @@ deploy:
     region: 'eu-central-1'
     on:
       branch: master
-      tags: true
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
