--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,15 @@ before_install:
   - pip install --user awscli
   - export PATH=$PATH:$HOME/.local/bin
   - |
-    if [ $TRAVIS_TAG ]; then
-      echo "has tag"
-      eval export CLOUDFRONT_DISTRIBUTION="$DEMO_CLOUDFRONT_DISTRIBUTION"
-    fi
-  - |
     if [ $TRAVIS_BRANCH == "master" ] && [ $IS_CONTENTFUL == "yes" ]; then
       echo "is from contentful"
       eval export CLOUDFRONT_DISTRIBUTION="$PROD_CLOUDFRONT_DISTRIBUTION"
     elif [ $TRAVIS_BRANCH == "master" ]; then
       echo "is from master"
       eval export CLOUDFRONT_DISTRIBUTION="$PROD_CLOUDFRONT_DISTRIBUTION"
+    elif [ $TRAVIS_TAG ]; then
+      echo "has tag"
+      eval export CLOUDFRONT_DISTRIBUTION="$DEMO_CLOUDFRONT_DISTRIBUTION"
     elif [ $TRAVIS_BRANCH == "dev" ]; then
       echo "is from dev"
       eval export CLOUDFRONT_DISTRIBUTION="$DEV_CLOUDFRONT_DISTRIBUTION"
