--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-less": "^3.0.5",
     "gatsby-plugin-matomo": "^0.7.2",
+    "gatsby-plugin-netlify": "^2.1.24",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
