--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "interactjs": "^1.4.0-rc.13",
     "less": "^3.10.3",
     "lodash": "^4.17.14",
+    "mapbox-gl": "^1.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-final-form": "^6.3.0",
