--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "classnames": "^2.2.6",
+    "csv-parse": "^4.8.2",
     "final-form": "^4.18.5",
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-google-analytics": "^2.1.7",
