update non-breaking dependencies

--- a/package.json
+++ b/package.json
@@ -29,33 +29,33 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^1.4.2",
+    "@aws-amplify/auth": "^1.5.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "classnames": "^2.2.6",
     "csv-parse": "^4.8.2",
-    "final-form": "^4.18.5",
-    "gatsby-image": "^2.0.38",
-    "gatsby-plugin-google-analytics": "^2.1.7",
-    "gatsby-plugin-less": "^3.0.5",
+    "final-form": "^4.18.6",
+    "gatsby-image": "^2.2.36",
+    "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-less": "^3.0.17",
     "gatsby-plugin-matomo": "^0.7.2",
-    "gatsby-plugin-netlify": "^2.1.24",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.34",
+    "gatsby-plugin-netlify": "^2.1.30",
+    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sharp": "^2.3.8",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-contentful": "^2.0.48",
-    "gatsby-transformer-remark": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.1.18",
+    "gatsby-source-contentful": "^2.1.70",
+    "gatsby-transformer-remark": "^2.6.42",
+    "gatsby-transformer-sharp": "^2.3.9",
     "git-revision-webpack-plugin": "^3.0.4",
-    "interactjs": "^1.4.0-rc.13",
+    "interactjs": "^1.7.2",
     "less": "^3.10.3",
     "lodash": "^4.17.14",
-    "mapbox-gl": "^1.5.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-final-form": "^6.3.0",
+    "mapbox-gl": "^1.6.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-final-form": "^6.3.3",
     "react-helmet": "^5.2.0",
     "sharp": "^0.22.0",
     "svg-inline-loader": "^0.8.0"
@@ -63,14 +63,14 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "chalk": "^2.4.2",
-    "contentful-import": "^7.4.3",
-    "dotenv": "^8.0.0",
+    "contentful-import": "^7.6.2",
+    "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.12.4",
-    "gatsby": "^2.3.22",
+    "eslint-plugin-react": "^7.17.0",
+    "gatsby": "^2.18.12",
     "gh-pages": "2.0.1",
     "inquirer": "^6.2.2",
-    "prettier": "^1.17.0",
+    "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
     "yargs-parser": "^13.0.0"
   }
