--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
     "csv-parse": "^4.8.2",
     "final-form": "^4.18.6",
     "gatsby": "^2.18.12",
-    "gatsby-image": "^2.2.36",
+    "gatsby-image": "^2.2.37",
     "gatsby-plugin-less": "^3.0.17",
     "gatsby-plugin-matomo": "^0.7.2",
     "gatsby-plugin-netlify": "^2.1.30",
     "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-contentful": "^2.1.70",
+    "gatsby-source-filesystem": "^2.1.43",
     "gatsby-source-wordpress": "^3.1.54",
+    "gatsby-transformer-sharp": "^2.3.9",
     "git-revision-webpack-plugin": "^3.0.4",
     "interactjs": "^1.7.2",
     "less": "^3.10.3",
