--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gatsby-source-wordpress": "^3.1.54",
     "gatsby-transformer-sharp": "^2.3.9",
     "git-revision-webpack-plugin": "^3.0.4",
+    "html2plaintext": "^2.1.2",
     "interactjs": "^1.7.2",
     "less": "^3.10.3",
     "lodash": "^4.17.14",
