--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "final-form": "^4.18.6",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.37",
+    "gatsby-plugin-feed": "^2.3.26",
     "gatsby-plugin-less": "^3.0.17",
     "gatsby-plugin-matomo": "^0.7.2",
     "gatsby-plugin-netlify": "^2.1.30",
