--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.3",
     "react-helmet": "^5.2.0",
-    "svg-inline-loader": "^0.8.0"
+    "svg-inline-loader": "^0.8.0",
+    "trackjs": "^3.7.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
