use query-string package to fix verification bug

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "less": "^3.10.3",
     "lodash": "^4.17.14",
     "mapbox-gl": "^1.6.0",
+    "query-string": "^5.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.3",
