use cognito_app_client_id_test

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
     cat > .env.production << EOF
     CONTENTFUL_SPACE_ID='`$CONTENTFUL_SPACE_ID`'
     CONTENTFUL_ACCESS_TOKEN='`$CONTENTFUL_ACCESS_TOKEN`'
-    COGNITO_APP_CLIENT_ID='`$COGNITO_APP_CLIENT_ID`'
+    COGNITO_APP_CLIENT_ID='`$COGNITO_APP_CLIENT_ID_TEST`'
     EOF
   - yarn run build
 
