--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.3",
     "react-helmet": "^5.2.0",
+    "react-popper": "^1.3.7",
     "svg-inline-loader": "^0.8.0",
     "trackjs": "^3.7.2"
   },
