--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "canvas-confetti": "^1.1.0",
     "classnames": "^2.2.6",
     "csv-parse": "^4.8.2",
     "final-form": "^4.18.6",
