--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.18.3",
-    "prettier": "^1.19.1",
-    "yargs-parser": "^13.0.0"
+    "prettier": "^1.19.1"
   }
 }
