--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "canvas-confetti": "^1.1.0",
     "classnames": "^2.2.6",
+    "core-js": "^3.6.4",
     "csv-parse": "^4.8.8",
     "final-form": "^4.18.7",
     "gatsby": "^2.19.28",
