--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-less": "^3.0.19",
     "gatsby-plugin-matomo": "^0.8.1",
     "gatsby-plugin-netlify": "^2.1.33",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
