--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "gatsby-plugin-matomo": "^0.8.1",
     "gatsby-plugin-netlify": "^2.1.33",
     "gatsby-plugin-netlify-cache": "^1.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-react-helmet-async": "^1.0.16",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-contentful": "^2.1.89",
@@ -61,7 +61,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-final-form": "^6.3.5",
-    "react-helmet": "^5.2.0",
+    "react-helmet-async": "^1.0.4",
     "react-popper": "^1.3.7",
     "svg-inline-loader": "^0.8.2",
     "trackjs": "^3.7.2"
