package: correct meta data

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grundeinkommensbuero-website",
-  "description": "Grundeinkommensbuero Website",
+  "description": "Expedition Grundeinkommen Website",
   "version": "0.1.1",
-  "homepage": "http://grundeinkommensbuero.de",
+  "homepage": "http://expedition-grundeinkommen.de",
   "keywords": [
     "grundeinkommen",
     "vertrauensgesellschaft"
