--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "csv-parse": "^4.9.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "^4.0.2",
     "final-form": "^4.19.1",
     "gatsby": "^2.21.12",
     "gatsby-image": "^2.4.1",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-less": "^3.2.1",
     "gatsby-plugin-matomo": "^0.8.3",
