--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
         "loose": true,
         "modules": false,
         "useBuiltIns": "usage",
+        "corejs": 3,
         "shippedProposals": true,
         "targets": {
           "browsers": [">0.25%", "not dead"]
