--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
+    "frontend-hooks": "file:../frontend-hooks",
     "gatsby": "^2.24.55",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-eslint": "^2.0.8",
@@ -63,7 +64,7 @@
     "lodash": "^4.17.20",
     "mapbox-gl": "^1.12.0",
     "query-string": "^5.1.1",
-    "react": "^16.13.1",
+    "react": "file:../frontend-hooks/node_modules/react",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
     "react-helmet-async": "^1.0.6",
