--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "@aws-amplify/auth": "^3.4.6",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@loadable/component": "^5.13.2",
+    "@xbge/context": "^1.0.1",
+    "@xbge/hooks": "^1.0.1",
     "canvas-confetti": "^1.3.0",
     "classnames": "^2.2.6",
-    "context": "../frontend-hooks/packages/context/",
     "core-js": "^3.6.5",
     "csv-parse": "^4.12.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
-    "gatsby": "^2.24.69",
+    "gatsby": "^2.24.74",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-feed": "^2.5.14",
@@ -49,23 +50,20 @@
     "gatsby-plugin-netlify": "^2.3.17",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-helmet-async": "^1.1.0",
-    "gatsby-plugin-sharp": "^2.6.39",
+    "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-contentful": "^2.3.50",
+    "gatsby-source-contentful": "^2.3.51",
     "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-source-wordpress": "^3.3.37",
+    "gatsby-source-wordpress": "^3.3.38",
     "gatsby-transformer-sharp": "^2.5.17",
     "git-revision-webpack-plugin": "^3.0.6",
-    "hooks": "../frontend-hooks/packages/hooks/",
     "html2plaintext": "^2.1.2",
     "interactjs": "^1.10.0",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "lodash": "^4.17.20",
     "mapbox-gl": "^1.12.0",
     "query-string": "^5.1.1",
-    "react": "file:../frontend-hooks/node_modules/react",
+    "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
     "react-helmet-async": "^1.0.7",
@@ -76,11 +74,11 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.10.0",
+    "eslint": "^7.11.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react": "^7.21.4",
     "prettier": "^1.19.1"
   }
 }
