--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^3.4.6",
-    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@aws-amplify/auth": "^3.4.7",
+    "@contentful/rich-text-react-renderer": "^14.1.1",
     "@loadable/component": "^5.13.2",
-    "@xbge/context": "^1.0.1",
-    "@xbge/hooks": "^1.0.1",
+    "@xbge/context": "^1.0.5",
+    "@xbge/hooks": "^1.0.5",
     "canvas-confetti": "^1.3.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
@@ -41,18 +41,18 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
-    "gatsby": "^2.24.74",
+    "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-less": "^3.2.9",
     "gatsby-plugin-matomo": "^0.8.3",
-    "gatsby-plugin-netlify": "^2.3.17",
+    "gatsby-plugin-netlify": "^2.3.20",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-helmet-async": "^1.1.0",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-contentful": "^2.3.51",
+    "gatsby-source-contentful": "^2.3.54",
     "gatsby-source-filesystem": "^2.3.32",
     "gatsby-source-wordpress": "^3.3.38",
     "gatsby-transformer-sharp": "^2.5.17",
@@ -63,8 +63,8 @@
     "lodash": "^4.17.20",
     "mapbox-gl": "^1.12.0",
     "query-string": "^5.1.1",
-    "react": "16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-final-form": "^6.5.1",
     "react-helmet-async": "^1.0.7",
     "react-popper": "^1.3.7",
@@ -79,6 +79,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.4",
-    "prettier": "^1.19.1"
+    "prettier": "^2.1.2"
   }
 }
