--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
     "react-helmet-async": "^1.0.6",
+    "react-photo-gallery": "^8.0.0",
     "react-popper": "^1.3.7",
     "svg-inline-loader": "^0.8.2",
     "trackjs": "^3.7.4"
