--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   "dependencies": {
     "@aws-amplify/auth": "^3.4.7",
     "@contentful/rich-text-react-renderer": "^14.1.1",
+    "@contentful/rich-text-types": "^14.1.1",
     "@loadable/component": "^5.13.2",
-    "@xbge/context": "^1.0.5",
-    "@xbge/hooks": "^1.0.6",
+    "@xbge/context": "^1.0.7-alpha.0",
+    "@xbge/hooks": "^1.0.7-alpha.0",
     "canvas-confetti": "^1.3.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
@@ -41,7 +42,7 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
-    "gatsby": "^2.24.79",
+    "gatsby": "^2.24.84",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-feed": "^2.5.14",
