--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@contentful/rich-text-react-renderer": "^14.1.1",
     "@contentful/rich-text-types": "^14.1.1",
     "@loadable/component": "^5.13.2",
-    "@xbge/context": "^1.0.7-alpha.0",
-    "@xbge/hooks": "^1.0.7-alpha.2",
+    "@xbge/context": "^1.0.8",
+    "@xbge/hooks": "^1.0.8",
     "canvas-confetti": "^1.3.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
