--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
+    "fuse.js": "^6.4.3",
     "gatsby": "^2.24.55",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-eslint": "^2.0.8",
