--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@aws-amplify/auth": "^3.4.1",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@loadable/component": "^5.13.1",
+    "animejs": "^3.2.1",
     "canvas-confetti": "^1.2.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "csv-parse": "^4.12.0",
+    "d3-scale": "^3.2.3",
+    "deck.gl": "^8.3.9",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
