--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-loader": "^4.0.2",
     "final-form": "^4.20.1",
     "fuse.js": "^6.4.3",
-    "gatsby": "^2.24.55",
+    "gatsby": "^2.29.0",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-feed": "^2.5.11",
@@ -70,6 +70,7 @@
     "react-final-form": "^6.5.1",
     "react-helmet-async": "^1.0.6",
     "react-popper": "^1.3.7",
+    "react-share": "^4.3.1",
     "svg-inline-loader": "^0.8.2",
     "trackjs": "^3.7.4"
   },
