animation: growth from a few cities

--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@aws-amplify/auth": "^3.4.1",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@loadable/component": "^5.13.1",
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "animejs": "^3.2.1",
     "canvas-confetti": "^1.2.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "csv-parse": "^4.12.0",
+    "d3-array": "^2.9.1",
     "d3-scale": "^3.2.3",
     "deck.gl": "^8.3.9",
     "eslint-config-react-app": "^5.2.1",
