--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
+    "react-final-form-listeners": "^1.0.2",
     "react-helmet-async": "^1.0.6",
     "react-popper": "^1.3.7",
     "svg-inline-loader": "^0.8.2",
