--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-amplify/auth": "^3.4.1",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@loadable/component": "^5.13.1",
+    "@turf/along": "^6.2.0",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "animejs": "^3.2.1",
