--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "canvas-confetti": "^1.2.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "countup.js": "^2.0.7",
     "csv-parse": "^4.12.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
@@ -72,8 +73,10 @@
     "react-final-form-listeners": "^1.0.2",
     "react-helmet-async": "^1.0.6",
     "react-popper": "^1.3.7",
+    "react-reel": "^1.2.3",
     "svg-inline-loader": "^0.8.2",
-    "trackjs": "^3.7.4"
+    "trackjs": "^3.7.4",
+    "use-count-up": "^2.2.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
