fixed preview-deploy to deploy-preview in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,10 +10,10 @@ CONTENTFUL_ENVIRONMENT = "launch"
 NODE_ENV = "development"
 
 # Tepmorary fix for preview deploy for PRs to the campaign-launch branch
-[context.preview-deploy]
+[context.deploy-preview]
 command = "npm run build-launch"
 
-[context.preview-deploy.environment]
+[context.deploy-preview.environment]
 COGNITO_APP_CLIENT_ID = "COGNITO_APP_CLIENT_ID_PLACEHOLDER"
 CONTENTFUL_ENVIRONMENT = "launch"
 NODE_ENV = "development"
