new env variable with GATSBY_ prefix

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,19 @@
 [context.production.environment]
 CONTENTFUL_ENVIRONMENT = "master"
 
-[context.campaign-launch]
-command = "npm run build-launch"
+# [context.campaign-launch]
+# command = "npm run build-launch"
 
 [context.campaign-launch.environment]
-COGNITO_APP_CLIENT_ID = "COGNITO_APP_CLIENT_ID_PLACEHOLDER"
 CONTENTFUL_ENVIRONMENT = "launch"
-USE_DEV_BACKEND = "override"
+GATSBY_USE_DEV_BACKEND = "override"
 
-# Tepmorary fix for preview deploy for PRs to the campaign-launch branch
-[context.deploy-preview]
-command = "npm run build-launch"
+# Tepmorary setup for the preview deploys 
+# triggered by PRs to the campaign-launch branch
+# Other build command hopefully not needed
+# [context.deploy-preview]
+# command = "npm run build-launch"
 
 [context.deploy-preview.environment]
-COGNITO_APP_CLIENT_ID = "COGNITO_APP_CLIENT_ID_PLACEHOLDER"
 CONTENTFUL_ENVIRONMENT = "launch"
-USE_DEV_BACKEND = "override"
+GATSBY_USE_DEV_BACKEND = "override"
