--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build",
-    "build-launch-local": "cross-env GATSBY_USE_DEV_BACKEND=override gatsby build",
+    "build-dev-backend": "cross-env GATSBY_USE_DEV_BACKEND=override gatsby build",
     "start": "npm run develop",
     "serve": "gatsby serve"
   },
