--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,18 @@
 [context.production.environment]
 CONTENTFUL_ENVIRONMENT = "master"
 
-# [context.campaign-launch]
-# command = "npm run build-launch"
+[context.campaign-launch]
+command = "npm run build-dev-backend"
 
 [context.campaign-launch.environment]
 CONTENTFUL_ENVIRONMENT = "launch"
 GATSBY_USE_DEV_BACKEND = "override"
+COGNITO_APP_CLIENT_ID = "COGNITO_APP_CLIENT_ID_REPLACEMENT"
 
-# Tepmorary setup for the preview deploys 
-# triggered by PRs to the campaign-launch branch
-# Other build command hopefully not needed
-# [context.deploy-preview]
-# command = "npm run build-launch"
+[context.deploy-preview]
+command = "npm run build-dev-backend"
 
 [context.deploy-preview.environment]
 CONTENTFUL_ENVIRONMENT = "launch"
 GATSBY_USE_DEV_BACKEND = "override"
+COGNITO_APP_CLIENT_ID = "COGNITO_APP_CLIENT_ID_REPLACEMENT"
