--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-final-form-listeners": "^1.0.2",
     "react-helmet-async": "^1.0.6",
     "react-popper": "^1.3.7",
+    "react-reel": "^1.2.3",
     "react-simple-snackbar": "^1.1.10",
     "svg-inline-loader": "^0.8.2",
     "trackjs": "^3.7.4"
