--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-helmet-async": "^1.0.6",
     "react-popper": "^1.3.7",
     "react-reel": "^1.2.3",
+    "react-share": "^4.3.1",
     "react-simple-snackbar": "^1.1.10",
     "svg-inline-loader": "^0.8.2",
     "trackjs": "^3.7.4"
