--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-contentful": "^5.1.3",
     "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-source-wordpress": "^5.1.1",
+    "gatsby-source-wordpress": "^5.3.1",
     "gatsby-transformer-sharp": "^3.1.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html2plaintext": "^2.1.2",
@@ -83,6 +83,7 @@
     "react-reel": "^1.2.3",
     "react-share": "^4.3.1",
     "react-simple-snackbar": "^1.1.10",
+    "stream-browserify": "^3.0.0",
     "svg-inline-loader": "^0.8.2",
     "trackjs": "^3.7.4"
   },
