--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "gatsby-source-wordpress": "^5.3.1",
     "gatsby-transformer-sharp": "^3.1.0",
     "git-revision-webpack-plugin": "^3.0.6",
-    "html2plaintext": "^2.1.2",
+    "html-to-text": "^7.1.1",
     "ibantools": "^3.2.1",
     "interactjs": "^1.9.22",
     "jquery": "^3.5.1",
