--- a/package.json
+++ b/package.json
@@ -58,10 +58,8 @@
     "gatsby-plugin-less": "^5.2.0",
     "gatsby-plugin-matomo": "^0.9.0",
     "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-helmet-async": "^1.2.0",
     "gatsby-plugin-sharp": "^3.1.3",
-    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-contentful": "^5.1.3",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-source-wordpress": "^5.3.1",
@@ -81,6 +79,7 @@
     "react-final-form": "^6.5.3",
     "react-final-form-listeners": "^1.0.3",
     "react-helmet-async": "^1.0.9",
+    "react-overlays": "^5.0.1",
     "react-popper": "^2.2.5",
     "react-reel": "^1.2.3",
     "react-share": "^4.3.1",
