--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "final-form": "^4.20.1",
     "fuse.js": "^6.4.3",
     "gatsby": "^3.1.3",
-    "gatsby-image": "^3.1.0",
     "gatsby-plugin-eslint": "^3.0.0",
     "gatsby-plugin-feed": "^3.1.0",
+    "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-less": "^5.2.0",
     "gatsby-plugin-matomo": "^0.9.0",
     "gatsby-plugin-netlify": "^3.1.0",
