--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "gatsby-plugin-feed": "^3.1.0",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-less": "^5.2.0",
-    "gatsby-plugin-loadable-components-ssr": "^2.1.0",
+    "gatsby-plugin-loadable-components-ssr": "^2.2.1-beta.2",
     "gatsby-plugin-matomo": "^0.9.0",
     "gatsby-plugin-netlify": "^3.1.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
