--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@aws-amplify/auth": "^3.4.1",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@loadable/component": "^5.15.0",
+    "@loadable/server": "^5.15.0",
     "@popperjs/core": "^2.9.2",
     "@turf/along": "^6.2.0",
     "@turf/distance": "^6.0.1",
@@ -56,7 +57,6 @@
     "gatsby-plugin-feed": "^3.1.0",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-less": "^5.2.0",
-    "gatsby-plugin-loadable-components-ssr": "^2.2.1-beta.2",
     "gatsby-plugin-matomo": "^0.9.0",
     "gatsby-plugin-netlify": "^3.1.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
@@ -90,6 +90,8 @@
     "trackjs": "^3.7.4"
   },
   "devDependencies": {
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.15.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-eslint": "^10.1.0",
